# koda

./: .gitignore  README.md  main.py  pyproject.toml
agent/: ai_handler.py  cli.py  controller.py  formatter.py  prompt.py  session.py  snapshot.py  tokens.py
agent/providers/: __init__.py  base.py  gemini.py  grok.py  groq.py  ollama.py  openai.py
agent/tools/: create_project.py  debug.py  detect_language.py  list_directory.py  read_file.py  refactor.py  registry.py  run_code.py  summarize_file.py  write_file.py
